Fixed Issues from PR comments